@@ -1,0 +1,1 @@
+usr/lib/mate-sensors-applet/plugins/libnvidia.so
