@@ -1,5 +1,14 @@
 usr/lib/matecomponent
-#usr/lib/mate-panel
 usr/lib/mate-sensors-applet/mate-sensors-applet
-usr/lib/mate-sensors-applet/plugins/*.so
+usr/lib/mate-sensors-applet/plugins/libacpi.so
+usr/lib/mate-sensors-applet/plugins/libeee.so
+usr/lib/mate-sensors-applet/plugins/libhddtemp.so
+usr/lib/mate-sensors-applet/plugins/libi8k.so
+usr/lib/mate-sensors-applet/plugins/libibm-acpi.so
+usr/lib/mate-sensors-applet/plugins/liblibsensors.so
+usr/lib/mate-sensors-applet/plugins/libomnibook.so
+usr/lib/mate-sensors-applet/plugins/libpmu-sys.so
+usr/lib/mate-sensors-applet/plugins/libsmu-sys.so
+usr/lib/mate-sensors-applet/plugins/libsonypi.so
+usr/lib/mate-sensors-applet/plugins/libudisks.so
 usr/share
